fixed nav bar covering content on page when resizing window

--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -73,7 +73,7 @@ color: silver;
 
 #main {
 
-margin-top: 10%;
+margin-top: 200px;
 background-color: #e7dec8;
 
 }
